Added patient choice of department and room

--- a/Frontend/html/patient.html
+++ b/Frontend/html/patient.html
@@ -26,10 +26,18 @@
     <br><br>
 
     <label for="department-dropdown">Select a department:</label>
-    <select id="department-dropdown">
+    <select id="department-dropdown" onchange="loadRooms()">
         <option value="department">--select department</option>
     </select>
     </select><br><br>
+
+    <label for="room-dropdown">Select a room:</label>
+    <select id="room-dropdown">
+        <option value="room">--select room</option>
+    </select>
+    </select><br><br>
+
+
     
 
     <footer class="footer">
